--- a/existing_goals.css
+++ b/existing_goals.css
@@ -18,7 +18,7 @@ body{
  }
  .existing_form{
     position: absolute;
-    top: 75%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: min-content;
@@ -169,4 +169,11 @@ label{
 }
 html{
    overflow-y: scroll;
+}
+.reference{
+   margin: -5px 0 20px 5px;
+   color: #a6a6a6;
+   font-size: small;
+   font-weight: 700;
+  
 }
