--- a/sign.css
+++ b/sign.css
@@ -38,6 +38,15 @@ body{
     background: none;
     outline: none;
  }
+ .textfield email{
+   width: 100%;
+   padding: 0 5px;
+   height: 40px;
+   font-size: 16px;
+   border: none;
+   background: none;
+   outline: none;
+}
  .textfield label{
     position:absolute;
     top: 50%;
